# ComputerGraphics_Experimentation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CodeCount.ps1  ComputerGraphics_Experimentation.sln  DllProps.props  GUIDllProps.props  GraphicsDLLProps.cmake  ProjectProps.props  README.md
VenomEngine/: CMakeLists.txt  Config.yaml  Scene.cpp  Scene.h  main.cpp
VenomEngine/resources/: Wireframe.frag  shader_hw2.frag  shader_particle.frag  shader_particle.vert
VenomEngine/resources/Compass/: A_Fantasy_Compass_Scene.fbx  Fantasy_compass.fbx  license.txt  scene.gltf
VenomEngine/resources/Particles/: code.py
VenomEngine/resources/Shaders/: 3DObjectMarker.frag  3DObjectMarker.vert  Background_Texture.frag  Background_Texture.vert  Bezier.frag  Bezier.tcs  Material.frag  Material.vert  Normal_Shader.frag  PBR_Shader.frag  PBR_Shader.vert  Particle.frag  Particle.vert  Particle_Snow.frag  Skybox.frag  Skybox.vert  Skybox_Panorama.frag  Skybox_Panorama.vert  shader_test.frag
VenomEngine/resources/Shrek/: Shrek.mtl
lib/: CMakeLists.txt
lib/CommonFramework/: BaseApplication.cpp  BaseApplication.h  BaseFramework.cpp  CMakeLists.txt  Camera.cpp  CommonFramework.vcxproj  CommonFramework.vcxproj.filters  Config.cpp  Config.h  DLL.cpp  Drawable3D.cpp  Entity.cpp  Exception.cpp  FrameworkLoader.cpp  GUI.cpp  InputSystem.cpp  Logger.cpp  Material.cpp  Mesh.cpp  Model.cpp  Model_Parser.cpp  Object.cpp  Shader.cpp  ShaderPipeline.cpp  VenomEngine.cpp  Vertex.cpp  Window.cpp
lib/CommonFramework/Application/: ApplicationCommonBase.cpp
lib/CommonFramework/Components/: Drawable3D.cpp  ParticleSystem.cpp  Renderer.cpp  Transform.cpp
lib/CommonFramework/DLL/: DLL.cpp
lib/CommonFramework/ECS/: Component.cpp  Entity.cpp
lib/CommonFramework/Engine/: EngineObject.cpp  EngineObjectPool.cpp
lib/CommonFramework/GUI/: GUI.cpp
lib/CommonFramework/Graphics/: Camera.cpp  Drawable3D.cpp  Mesh.cpp  Model.cpp  Model_Parser.cpp  ParticleSystem.cpp  Rendering.cpp  ShaderPipeline.cpp  Skybox.cpp  Text2D.cpp  Texture.cpp  Vector.cpp
lib/CommonFramework/Math/: Vertex.cpp
lib/CommonFramework/Systems/: GeneralSystem.cpp
lib/CommonFramework/Tools/: BaseFramework.cpp  Config.cpp  EngineLoader.cpp  FrameworkLoader.cpp  MemoryPool.cpp  Object.cpp  ObjectPool.cpp  Resources.cpp  Scene.cpp  String.cpp  Time.cpp  Yaml.cpp
lib/CommonFramework/Window/: Window.cpp
lib/ContextAPIs/: CMakeLists.txt
lib/ContextAPIs/GLFW_ContextAPI/: CMakeLists.txt  GLFWInput.cpp  GLFWWindow.cpp  GLFWWindow.h
lib/ContextAPIs/WinNative_ContextAPI/: CMakeLists.txt  WinNativeWindow.cpp  WinNativeWindow.h
lib/DX11_DLL/: Application.cpp  Application.h  ApplicationBase.h  ApplicationTools.cpp  ApplicationTools.h  Config_DX11_DLL.yaml  DX11_DLL.vcxproj  DX11_DLL.vcxproj.filters  Framework.cpp  Framework.h
lib/DX12_DLL/: Application.cpp  CMakeLists.txt
lib/ExternalLibs/: CMakeLists.txt
lib/ExternalLibs/SPIRV-Cross/: SPIRV-Cross.vcxproj  spirv_common.hpp  spirv_cross.cpp  spirv_msl.cpp  spirv_msl.hpp  spirv_reflect.cpp
lib/ExternalLibs/assimp/: CMakeLists.txt
lib/ExternalLibs/glad/: glad.vcxproj
lib/ExternalLibs/glfw/: CMakeLists.txt
lib/ExternalLibs/imgui/: imgui.vcxproj  imgui.vcxproj.filters
lib/ExternalLibs/rapidyaml/: CMakeLists.txt
lib/ExternalLibs/stb/: CMakeLists.txt  stb.vcxproj  stb.vcxproj.filters  stb_vorbis.c
lib/GLFWWindow/: CMakeLists.txt  Config_GLFWWindow.yaml  GLFWInput.cpp  GLFWWindow.cpp  GLFWWindow.h  GLFWWindow.vcxproj  GLFWWindow.vcxproj.filters
lib/GUI/: CMakeLists.txt
lib/GUI/GUI_OpenGL_GLFW/: CMakeLists.txt  GUI.cpp  GUI.h  GUI_OpenGL_GLFW.vcxproj  GUI_OpenGL_GLFW.vcxproj.filters
lib/GUIAPIs/GUI_OpenGL_GLFW/: CMakeLists.txt  GUI.cpp
lib/GraphicsAPIs/: CMakeLists.txt
lib/GraphicsAPIs/DX12_GraphicsAPI/: Application.cpp  Application.h  ApplicationBase.cpp  CMakeLists.txt  Framework.h
lib/GraphicsAPIs/OpenGL_GraphicsAPI/: Application.cpp  Application.h  ApplicationBase.h  ApplicationTools.cpp  ApplicationTools.h  BufferManager.cpp  CMakeLists.txt  Config_OpenGL_DLL.yaml  Mesh.h  Model.h  ParticleSystem.cpp  ParticleSystem.h  Rendering.cpp  Rendering.h  Shader.cpp  ShaderPipeline.cpp  ShaderPipeline.h  VertexBuffer.cpp
lib/GraphicsAPIs/Vulkan_GraphicsAPI/: ApplicationBase.h  ApplicationTools.cpp  CMakeLists.txt  Config_Vulkan_DLL.yaml
lib/OpenGL_DLL/: Application.cpp  Application.h  ApplicationBase.cpp  ApplicationBase.h  ApplicationTools.cpp  ApplicationTools.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  Config_OpenGL_DLL.yaml  Framework.cpp  Framework.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGL_DLL.vcxproj  OpenGL_DLL.vcxproj.filters  ParticleSystem.cpp  ParticleSystem.h  Rendering.cpp  Rendering.h  Shader.cpp  Shader.h  ShaderPipeline.cpp  ShaderPipeline.h  Text2D.cpp  Text2D.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
lib/SPIRV-Cross/: CMakeLists.txt  SPIRV-Cross.vcxproj.filters  spirv_cross_containers.hpp  spirv_glsl.cpp  spirv_glsl.hpp
lib/Venom/: CMakeLists.txt  VenomEngine.cpp
lib/Venom/Application/: ApplicationCommonBase.cpp
lib/Venom/Components/: ParticleSystem.cpp  Skybox.cpp  Transform.cpp
lib/Venom/ECS/: Component.cpp  Entity.cpp
lib/Venom/GUI/: GUI.cpp
lib/Venom/Graphics/: Camera.cpp  Model_Parser.cpp  Shader.cpp  ShaderPipeline.cpp  Texture.cpp
lib/Venom/Tools/: Config.cpp  Logger.cpp  Scene.cpp  String.cpp  Yaml.cpp
lib/VenomCore/: CMakeLists.txt  VenomEngine.cpp
lib/Vulkan_DLL/: Application.cpp  Application.h  ApplicationBase.cpp  ApplicationBase.h  ApplicationTools.cpp  ApplicationTools.h  CMakeLists.txt  Config_Vulkan_DLL.yaml  Framework.cpp  Framework.h  Vulkan_DLL.aps  Vulkan_DLL.vcxproj  Vulkan_DLL.vcxproj.filters  resource.h
lib/WinNativeWindow/: CMakeLists.txt  Config_WinNativeWindow.yaml  WinNativeWindow.cpp  WinNativeWindow.h  WinNativeWindow.vcxproj  WinNativeWindow.vcxproj.filters
lib/Yaml-Cpp/: Yaml-Cpp.vcxproj  Yaml-Cpp.vcxproj.filters
lib/fmt/: fmt.vcxproj  fmt.vcxproj.filters
lib/freetype/: CMakeLists.txt
lib/imgui/: imgui.h  imgui.vcxproj
(+190 files in other folders)
